--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,19 +4,28 @@
   <title>Server</title>
 
   <script src="/socket.io/socket.io.js"></script>
+</head>
+<body>
+
+test channel: <code>test_room</code></br>
+
+log:
+<pre style="background: #f7f7f7" id="log"></pre>
   <script type="text/javascript">
     io = io.connect()
     io.on('rcv', function(data) { window.location.hash =  "rcv?"+JSON.stringify(data)  })
     window.onhashchange = function(){
+        content = document.getElementById('log').innerHTML
+        document.getElementById('log').innerHTML = content + window.location.hash + "\n"
+
         var res = /\#(\w+)\/(\d+\.\d+)\?(.*)/.exec(window.location.hash)
+
         if (!res || res[1] == "rcv?") return;
         io.emit(res[1], JSON.parse(res.pop()))
     }
+    io.emit("join", {room: "test_room2"})
     onhashchange()
   </script>
-</head>
-<body>
-
 
 </body>
 </html>
