--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,30 +2,34 @@
 <html>
 <head>
   <title>Server</title>
-
-  <script src="/socket.io/socket.io.js"></script>
 </head>
-<body>
+<body style="background: #fff">
 
 test channel: <code>test_room</code></br>
 
 log:
 <pre style="background: #f7f7f7" id="log"></pre>
   <script type="text/javascript">
-    io = io.connect()
-    io.on('rcv', function(data) { window.location.hash =  "rcv?"+JSON.stringify(data)  })
-    window.onhashchange = function(){
-        content = document.getElementById('log').innerHTML
-        document.getElementById('log').innerHTML = content + window.location.hash + "\n"
 
-        var res = /\#(\w+)\/(\d+\.\d+)\?(.*)/.exec(window.location.hash)
-
-        if (!res || res[1] == "rcv?") return;
-        io.emit(res[1], JSON.parse(res.pop()))
+    var dataReceived = function(data){
+        console.log(data)
+          window.location.hash = "?"+JSON.stringify(data)
     }
-    io.emit("join", {room: "test_room2"})
-    onhashchange()
-  </script>
 
+    var sendData = function(data){
+          var toServer = /\#\!(.*)/.exec(window.location.hash)
+          if (toServer) io.emit('proxy', JSON.parse(toServer.pop()))
+    }
+
+    window.initIO = function(){
+          window.io = io.connect()
+          window.io.on('rcv', dataReceived)
+          window.location.hash = "#?READY"
+          window.onhashchange = sendData;
+          io.emit('logged', {})
+    }
+
+  </script>
+  <script async src="/socket.io/socket.io.js" onLoad="initIO()"></script>
 </body>
 </html>
